# app-fastapi-ml

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/auth_user/: views.py
api_v1/ml_model/: dependencies.py  schemas.py  views.py
auth/: README.md  utils.py
core/: config.py
